# shredder

./: .gitignore  Cargo.toml  LICENSE.md  README.md  check.fish
.circleci/: config.yml
benches/: shredder_benchmark.rs
src/: atomic.rs  collector.rs  finalize.rs  lib.rs  lockout.rs  plumbing.rs  r.rs  scan.rs  smart_ptr.rs  wrappers.rs
src/collector/: alloc.rs  atomic_protection.rs  collect_impl.rs  data.rs  dropper.rs  mod.rs  ref_cnt.rs  trigger.rs
src/concurrency/: atomic_protection.rs  chunked_ll.rs  cross_thread_buffer.rs  lockout.rs  mod.rs
src/marker/: gc_deref.rs  gc_drop.rs  gc_safe.rs  mod.rs
src/scan/: helper.rs  mod.rs  r.rs  std_impls.rs
src/smart_ptr/: deref_gc.rs  gc.rs  mod.rs  mutex.rs  refcell.rs
src/std_impls/: collections.rs  mod.rs  value_types.rs  wrap_types.rs
tests/: circular.rs  coerce.rs  derive_macro.rs  downcast.rs  finalize.rs  integration.rs  readme.rs  stress.rs  unsized.rs
tests/derive_compile/: basic_finalize.rs  basic_finalize_fields.rs  basic_scan.rs  basic_scanables.rs
tests/derive_compile_fail/: non_gc_safe.rs  non_gc_safe.stderr  non_scan.rs  non_scan.stderr
