[package]
name = "shredder"
description = "Garbage collection as a library for Rust"
categories = ["memory-management"]
keywords = ["gc", "garbage", "collection", "garbage-collection"]

authors = ["Gregor Peach <gregorpeach@gmail.com>"]
repository = "https://github.com/Others/shredder"
readme = "README.md"
license = "MIT"

version = "0.1.3-dev"
edition = "2018"

[dependencies]
crossbeam = "0.7.3"
dashmap = { version = "3.11", features = ["raw-api"] }
dynqueue = { version = "0.1.3", features = ["crossbeam-queue"] }
log = "0.4.8"
once_cell = "1.4"
parking_lot = "0.11.0"
rayon = "1.3"
rental = "0.5.5"
shredder_derive = "0.1.1"
#shredder_derive = { git = "https://github.com/Others/shredder_derive.git" }
#shredder_derive = { path = "../shredder_derive" }
stable_deref_trait = "1.1"

[dev-dependencies]
paste = "1.0"
rand = "0.7.3"
trybuild = "1.0"

#[profile.release]
#debug = true
