[package]
name = "shredder"
description = "Garbage collection as a library for Rust"
categories = ["memory-management"]
keywords = ["gc", "garbage", "collection", "garbage-collection"]

authors = ["Gregor Peach <gregorpeach@gmail.com>"]
repository = "https://github.com/Others/shredder"
readme = "README.md"
license = "MIT"

version = "0.2.1-dev"
edition = "2018"

[dependencies]
arc-swap = "1.4"
crossbeam = "0.8.1"
dynqueue = { version = "0.3.0", features = ["crossbeam-queue"] }
log = "0.4.14"
once_cell = "1.8"
num_cpus = "1.0"
parking_lot = "0.11.2"
rayon = "1.5"
rental = "0.5.6"
shredder_derive = "0.2.0"
#shredder_derive = { git = "https://github.com/Others/shredder_derive.git" }
#shredder_derive = { path = "../shredder_derive" }
stable_deref_trait = "1.2"
thread_local = "1.1"

[dev-dependencies]
paste = "1.0"
rand = "0.8.3"
trybuild = "1.0"

[profile.release]
debug = true

[features]
default = []
nightly-features = []
